feat: implement Role-Based Access Control (RBAC) using Method Security.